Fix WB flex layout shift on opening jQuery's dialogs

--- a/specifyweb/frontend/js_src/css/workbench.css
+++ b/specifyweb/frontend/js_src/css/workbench.css
@@ -68,7 +68,7 @@
 }
 
 .wb-upload-view {
-  display: contents;
+  position: absolute;
 }
 
 /* HANDSONTABLE overwrites */
